--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,8 +15,7 @@ $icons-layout: smart;
 }
 
 .header {
-  padding-bottom: 15px;
-  margin: 0;
+  margin-bottom: 35px;
 }
 
 .contacts {
@@ -36,7 +35,7 @@ $icons-layout: smart;
   li {
     list-style: none;
     display: inline-block;
-    margin-left: 30px;
+    margin-left: 20px;
     position: relative;
   }
 
@@ -79,14 +78,16 @@ a {
 
   li {
     list-style: none;
-    margin-right: 30px;
+    margin-left: 20px;
     display: inline-block;
-
-    a {
-      width: 9px;
-      height: 11px;
-      display: inline-block;
-    }
+      &:first-child {
+        margin-left: 0;
+      }
+      a {
+        width: 9px;
+        height: 11px;
+        display: inline-block;
+      }
   }
   .facebook a {
     @include icons-sprite(ico-facebook);
@@ -117,7 +118,6 @@ a {
 .header-logo {
   float: left;
   margin-top: 40px;
-  margin-left: 10px;
   width: 150px;
   height: 40px;
 }
@@ -192,7 +192,6 @@ a {
 
 .main-content {
   min-height: 882px;
-  margin-top: 35px;
   background: url("/img/img-content.jpg") no-repeat 0 0;
   position: relative;
 
@@ -207,12 +206,15 @@ a {
       color: white;
       font-size: 78px;
       text-transform: uppercase;
+      display: inline-block;
+      margin-bottom: 40px;
     }
     p {
       color: #a3b1bf;
       font-size: 24px;
       line-height: 1.5;
-      margin-top: 40px;
+      display: inline-block;
+      margin-bottom: 70px;
     }
 
     .button {
@@ -220,7 +222,6 @@ a {
       color: white;
       font-size: 18px;
       text-transform: uppercase;
-      margin-top: 70px;
       border-radius: 2px;
       border: 1px solid #00bc9c;
       background-color: #00bc9c;
@@ -247,13 +248,13 @@ a {
       margin-top: 131px;
       font-size: 44px;
       color: #506a85;
+      margin-bottom: 35px;
     }
     p {
       color: #73879c;
       font-size: 22px;
       line-height: 2;
       display: inline-block;
-      margin-top: 35px;
     }
   }
   .latest-works {
@@ -678,7 +679,14 @@ a {
     width: 54%;
   }
 }
-
+@media screen and (max-width: 873px) {
+  .content-info .main-info {
+    width: 60%;
+  }
+  .information .information-content {
+    width: 70%;
+  }
+}
 @media screen and (max-width: 800px) {
   .content-info .main-info {
     width: 54%;
@@ -690,7 +698,11 @@ a {
     }
   }
 }
-
+@media screen and (max-width: 795px) {
+  .content-info .main-info {
+    width: 83%;
+  }
+}
 @media screen and (max-width: 676px) {
   .content-info .main-info {
     width: 54%;
@@ -702,15 +714,32 @@ a {
     }
   }
 }
-
+@media screen and (max-width: 635px) {
+  .content-info .main-info {
+    width: 93%;
+  }
+  .information .information-content {
+    width: 86%;
+  }
+}
 @media screen and (max-width: 460px) {
   .content-info .main-info {
-    width: 54%;
+    width: 80%;
     h2 {
       font-size: 27px;
+      margin-top: 50px;
     }
     p {
       font-size: 15px;
+    }
+  }
+  .general-info .slogan{
+    h2 {
+      margin-top: 50px;
+      margin-bottom: 20px;
+    }
+    p {
+      margin-bottom: 40px;
     }
   }
 }
@@ -1400,7 +1429,7 @@ a {
 }
 @media screen and (max-width: 565px) {
   .icons li {
-    margin-right: 15px;
+    margin-left: 15px;
   }
 }
 @media screen and (max-width: 695px) {
@@ -1410,5 +1439,12 @@ a {
       margin-bottom: 0;
     }
   }
+}
+@media screen and (max-width: 555px) {
+  .header-find {
+    top: 15px;
+  }
+}
+@media screen and (max-width: 565px) {
 
 }
