--- a/css/jquery.bxslider.css
+++ b/css/jquery.bxslider.css
@@ -53,7 +53,7 @@
 }
 
 /* LOADER */
-
+/*
 .bx-wrapper .bx-loading {
 	min-height: 50px;
 	background: url(images/bx_loader.gif) center center no-repeat #fff;
@@ -63,7 +63,7 @@
 	top: 0;
 	left: 0;
 	z-index: 2000;
-}
+}*/
 
 /* PAGER */
 
@@ -103,7 +103,7 @@
 
 /* DIRECTION CONTROLS (NEXT / PREV) */
 
-.bx-wrapper .bx-prev {
+/*.bx-wrapper .bx-prev {
 	left: 10px;
 	background: url(images/controls.png) no-repeat 0 -32px;
 }
@@ -111,7 +111,7 @@
 .bx-wrapper .bx-next {
 	right: 10px;
 	background: url(images/controls.png) no-repeat -43px -32px;
-}
+}*/
 
 .bx-wrapper .bx-prev:hover {
 	background-position: 0 0;
